@@ -38,6 +38,7 @@
  *      - util-linux-2.10o ... 06 Sep 00
  *      - util-linux-2.10r ... 06 Dec 00
  *      - util-linux-2.11g ... 02 Jul 01
+ *      - util-linux-2.11u ... 24 Aug 02
  */
 
 /* Including <linux/fs.h> became more and more painful.
@@ -45,13 +46,15 @@
    only designed to be able to check a magic number
    in case no filesystem type was given. */
 
-#define MINIX_SUPER_MAGIC   0x137F         /* original minix fs */
-#define MINIX_SUPER_MAGIC2  0x138F         /* minix fs, 30 char names */
+#define MINIX_SUPER_MAGIC   0x137F         /* minix v1, 14 char names */
+#define MINIX_SUPER_MAGIC2  0x138F         /* minix v1, 30 char names */
+#define MINIX2_SUPER_MAGIC  0x2468	   /* minix v2, 14 char names */
+#define MINIX2_SUPER_MAGIC2 0x2478         /* minix v2, 30 char names */
 struct minix_super_block {
 	u_char   s_dummy[16];
 	u_char   s_magic[2];
 };
-#define minixmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8))
+#define minixmagic(s)	assemble2le(s.s_magic)
 
 #define ISODCL(from, to) (to - from + 1)
 #define ISO_STANDARD_ID "CD001"
@@ -76,7 +79,7 @@ struct ext_super_block {
 	u_char   s_dummy[56];
 	u_char   s_magic[2];
 };
-#define extmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8))
+#define extmagic(s)	assemble2le(s.s_magic)
 
 #define EXT2_PRE_02B_MAGIC  0xEF51
 #define EXT2_SUPER_MAGIC    0xEF53
@@ -93,7 +96,7 @@ struct ext2_super_block {
 	u_char	s_dummy3[88];
 	u_char	s_journal_inum[4];	/* ext3 only */
 };
-#define ext2magic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8))
+#define ext2magic(s)	assemble2le(s.s_magic)
 
 struct reiserfs_super_block
 {
@@ -126,19 +129,16 @@ struct xiafs_super_block {
     u_char     s_dummy[60];
     u_char     s_magic[4];
 };
-#define xiafsmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8) + \
-			(((uint) s.s_magic[2]) << 16) + \
-			(((uint) s.s_magic[3]) << 24))
+#define xiafsmagic(s)	assemble4le(s.s_magic)
 
 /* From jj@sunsite.ms.mff.cuni.cz Mon Mar 23 15:19:05 1998 */
-#define UFS_SUPER_MAGIC 0x00011954
+#define UFS_SUPER_MAGIC_LE 0x00011954
+#define UFS_SUPER_MAGIC_BE 0x54190100
 struct ufs_super_block {
     u_char     s_dummy[0x55c];
     u_char     s_magic[4];
 };
-#define ufsmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8) + \
-			 (((uint) s.s_magic[2]) << 16) + \
-			 (((uint) s.s_magic[3]) << 24))
+#define ufsmagic(s)	assemble4le(s.s_magic)
 
 /* From Richard.Russon@ait.co.uk Wed Feb 24 08:05:27 1999 */
 #define NTFS_SUPER_MAGIC "NTFS"
@@ -179,9 +179,7 @@ struct cramfs_super_block {
 	u_char    s_dummy[12];
 	u_char    s_id[16];
 };
-#define cramfsmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8) + \
-			 (((uint) s.s_magic[2]) << 16) + \
-			 (((uint) s.s_magic[3]) << 24))
+#define cramfsmagic(s)	assemble4le(s.s_magic)
 
 #define HFS_SUPER_MAGIC 0x4244
 struct hfs_super_block {
@@ -189,20 +187,15 @@ struct hfs_super_block {
 	u_char    s_dummy[18];
 	u_char    s_blksize[4];
 };
-#define hfsmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8))
-#define hfsblksize(s)	((uint) s.s_blksize[0] + \
-			 (((uint) s.s_blksize[1]) << 8) + \
-			 (((uint) s.s_blksize[2]) << 16) + \
-			 (((uint) s.s_blksize[3]) << 24))
+#define hfsmagic(s)	assemble2le(s.s_magic)
+#define hfsblksize(s)	assemble4le(s.s_blksize)
 
 #define HPFS_SUPER_MAGIC 0xf995e849
 struct hpfs_super_block {
 	u_char    s_magic[4];
 	u_char    s_magic2[4];
 };
-#define hpfsmagic(s)	((uint) s.s_magic[0] + (((uint) s.s_magic[1]) << 8) + \
-			 (((uint) s.s_magic[2]) << 16) + \
-			 (((uint) s.s_magic[3]) << 24))
+#define hpfsmagic(s)	assemble4le(s.s_magic)
 
 struct adfs_super_block {
 	u_char    s_dummy[448];
@@ -211,3 +204,46 @@ struct adfs_super_block {
 	u_char    s_checksum[1];
 };
 #define adfsblksize(s)	((uint) s.s_blksize[0])
+
+/* found in first 4 bytes of block 1 */
+struct vxfs_super_block {
+	u_char	s_magic[4];
+};
+#define vxfsmagic(s)	assemble4le(s.s_magic)
+#define VXFS_SUPER_MAGIC 0xa501FCF5
+
+struct jfs_super_block {
+	char	s_magic[4];
+	u_char	s_version[4];
+	u_char	s_dummy1[93];
+	char	s_fpack[11];
+	u_char	s_dummy2[24];
+	u_char	s_uuid[16];
+	char	s_label[16];
+};
+#define JFS_SUPER1_OFF 0x8000
+#define JFS_MAGIC "JFS1"
+
+struct sysv_super_block {
+	u_char  s_dummy1[504];
+	u_char  s_magic[4];
+	u_char  type[4];
+};
+#define sysvmagic(s)		assemble4le(s.s_magic)
+#define SYSV_SUPER_MAGIC	0xfd187e20
+
+struct mdp_super_block {
+	u_char	md_magic[4];
+};
+#define MD_SB_MAGIC	0xa92b4efc
+#define mdsbmagic(s)	assemble4le(s.md_magic)
+
+static inline int
+assemble2le(unsigned char *p) {
+	return (p[0] | (p[1] << 8));
+}
+
+static inline int
+assemble4le(unsigned char *p) {
+	return (p[0] | (p[1] << 8) | (p[2] << 16) | (p[3] << 24));
+}
